--- a/index.html
+++ b/index.html
@@ -565,9 +565,11 @@
                             [3] Speed and Velocity.
                         </a>
                     </li>
-                <a href="https://www.mathsisfun.com/algebra/trig-four-quadrants.html" target="_blank">[4] Sine, Cosine and Tangent in Four Quadrants.</a><br />
-                <br />
-                    
+                    <li>
+                        <a href="https://www.mathsisfun.com/algebra/trig-four-quadrants.html" 
+                            target="_blank">
+                            [4] Sine, Cosine and Tangent in Four Quadrants.</a>
+                    </li>
                 </ul>
             </p>
         </section>  
