--- a/index.html
+++ b/index.html
@@ -269,42 +269,41 @@
             </p>
         </section>
 
-        <section>
-                <h3>References</h3> <!-- references to concepts used in this section. target="_blank" will display the link in a new tab.-->              
-            
-                <ul>
-                    <li>
-                        <a href="https://openstax.org/books/precalculus/pages/8-8-vectors" 
-                            target="_blank">
-                            8.8 Vectors. Precalculus. Openstax.
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://encyclopediaofmath.org/index.php?title=Vector&oldid=49131" 
-                            target="_blank">
-                            Vector. Encyclopedia of Mathematics.
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://encyclopediaofmath.org/index.php?title=Vector_algebra&oldid=49132" 
-                            target="_blank">
-                            Vector algebra. Encyclopedia of Mathematics.
-                        </a> 
-                    </li>
-                    <li>
-                        <a href="https://encyclopediaofmath.org/wiki/Cartesian_orthogonal_coordinate_system"
-                            target="_blank">
-                            Cartesian orthogonal coordinate system. Encyclopedia of Mathematics.
-                        </a>
-                    </li>
-                    <li>
-                         <a href="https://openstax.org/books/physics/pages/5-1-vector-addition-and-subtraction-graphical-methods"
-                            target="_blank">
-                            5.1 Vector Addition and Subtraction: Graphical Methods. Physics High School. Openstax.
-                        </a>
-                    </li>
-                </ul>      
-        </section>
+        <aside>
+            <h3>References</h3> <!-- references to concepts used in this section. target="_blank" will display the link in a new tab.-->              
+            <ul>
+                <li>
+                    <a href="https://openstax.org/books/precalculus/pages/8-8-vectors" 
+                        target="_blank">
+                        8.8 Vectors. Precalculus. Openstax.
+                    </a>
+                </li>
+                <li>
+                    <a href="http://encyclopediaofmath.org/index.php?title=Vector&oldid=49131" 
+                        target="_blank">
+                        Vector. Encyclopedia of Mathematics.
+                    </a>
+                </li>
+                <li>
+                    <a href="http://encyclopediaofmath.org/index.php?title=Vector_algebra&oldid=49132" 
+                        target="_blank">
+                        Vector algebra. Encyclopedia of Mathematics.
+                    </a> 
+                </li>
+                <li>
+                    <a href="https://encyclopediaofmath.org/wiki/Cartesian_orthogonal_coordinate_system"
+                        target="_blank">
+                        Cartesian orthogonal coordinate system. Encyclopedia of Mathematics.
+                    </a>
+                </li>
+                <li>
+                    <a href="https://openstax.org/books/physics/pages/5-1-vector-addition-and-subtraction-graphical-methods"
+                        target="_blank">
+                        5.1 Vector Addition and Subtraction: Graphical Methods. Physics High School. Openstax.
+                    </a>
+                </li>
+            </ul>      
+        </aside>
     </article>
 
     <article>
