--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     -->
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 
     <title>The House of Phi</title>
     <!--This sets the title of your page, which is the title that appears in the browser tab the page is loaded in. It is also
