add aside to references

--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
             And the boat must be propeled at a speed of 37.11 Km/h and in a direction that forms 76º with the port side of the river bank.
             </p>   
 
-            <p> <!-- references to concepts used in this problem target="_blank" will display the link in a new tab. -->
+            <aside> <!-- references to concepts used in this problem target="_blank" will display the link in a new tab. -->
                 <h4>References</h4>
                 <ul>
                     <li>
@@ -567,7 +567,7 @@
                         </a>
                     </li>
                 </ul>
-            </p>
+            </aside>
         </section>  
 
         <section >  <!--Problem 2-->
@@ -618,20 +618,30 @@
                 target="_blank" will display the link in a new tab.
                 -->
             </p>
-            <p        
+            <aside>      
                 <h4>References</h4>
-                <a href="https://openstax.org/books/precalculus/pages/8-8-vectors" target="_blank">
-                    [1] Precalculus. 8.8 Vectors. Vector Components in Terms of Mangitude and Direction.
-                </a><br />
-                <a href="https://openstax.org/books/algebra-and-trigonometry/pages/7-2-right-triangle-trigonometry" target="_blank">
-                [2] Algebra and Trigonometry. 7.2 Right Triangle Trigonometry.Finding Trigonometric Functions of Special Angles Using Side Lengths
-                </a><br />
-                <a href="https://openstax.org/books/algebra-and-trigonometry/pages/7-4-the-other-trigonometric-functions" target="_blank">
-                [3] Algebra and Trigonometry. 7.4 The Other Trigonometric Functions. Table 1
-            </a><br />
-            <br />
-        </p>
-    </section>
+                <ul>
+                    <li>
+                        <a href="https://openstax.org/books/precalculus/pages/8-8-vectors" 
+                            target="_blank">
+                            [1] Precalculus. 8.8 Vectors. Vector Components in Terms of Mangitude and Direction.
+                        </a>
+                    </li>
+                    <li>   
+                        <a href="https://openstax.org/books/algebra-and-trigonometry/pages/7-2-right-triangle-trigonometry" 
+                            target="_blank">
+                            [2] Algebra and Trigonometry. 7.2 Right Triangle Trigonometry.Finding Trigonometric Functions of Special Angles Using Side Lengths
+                        </a>
+                    </li> 
+                    <li>   
+                        <a href="https://openstax.org/books/algebra-and-trigonometry/pages/7-4-the-other-trigonometric-functions" 
+                            target="_blank">
+                            [3] Algebra and Trigonometry. 7.4 The Other Trigonometric Functions. Table 1
+                        </a>
+                    </li>     
+                </ul>
+            </aside>      
+        </section>
     <section> <!--Problem 3-->
         <h3>Exercise 3</h3>    
         <p>
