--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 
 <!DOCTYPE html>
-<!--t is a required preamble.-->
+<!--it is a required preamble.-->
 <!--<html> element wraps all the content on the entire page and is sometimes known as the root element.-->
 <!-- lang="en" declares the language of the Web page as English-->
 <html lang="en">
