--- a/index.html
+++ b/index.html
@@ -50,24 +50,22 @@
 <br> (line break)
 -->
 <!--the body contains all the content that you want to show to web users when they visit your page-->
-<body>
 
+<body>
     <header>
         <!-- id attribute define an unique identifier. Its purpose is to identify the element when linking, scripting, or styling -->
         <h1 id="Home">PRE-UNIVERSITARY PHYSICS</h1>
     </header>
-    <!--Navigation bar. Links to the site's main sections-->
-    <nav>
+   
+    <nav> <!--Navigation bar. Links to the site's main sections-->
         <ul>
             <li><a href="#Home">Home</a></li>
             <li><a href="#Vectors in Space">Vectors in Space</a></li>
             <li><a href="#Geometry">Geometry</a></li>
             <li><a href="#Vector Operations Exercises">Vector Operations Exercises</a></li>
-        </ul>
+        </ul> 
 
-        <!-- A Search form is another common non-linear way to navigate through a website. -->
-
-        <form>
+        <form><!-- A Search form is another common non-linear way to navigate through a website. -->
             <input type="search" name="q" placeholder="Search query">
             <input type="submit" value="Go!">
         </form>
@@ -382,8 +380,10 @@
             </ul>      
         </aside>
     </article> 
+
     <article>
         <h2 id="Vector Operations Exercises">VECTOR OPERATIONS EXERCISES</h2>  
+
         <section >
             <h3>Exercise 1</h3>
             <p>
@@ -642,6 +642,7 @@
                 </ul>
             </aside>      
         </section>
+
         <section> <!--Problem 3-->
             <h3>Exercise 3</h3>    
             <p>
@@ -854,19 +855,30 @@
                     </semantics>
                 </math>
                 <br />
-
-                <!-- references to concepts used in this problem target="_blank" will display the link in a new tab.-->
-                <h3>References</h3>
-                <a href="https://openstax.org/books/university-physics-volume-1/pages/2-2-coordinate-systems-and-components-of-a-vector" target="_blank">
-                    [1] Coordinate Systems and Components of a Vector.
-                </a><br />
-                <a href="https://openstax.org/books/university-physics-volume-1/pages/2-4-products-of-vectors" target="_blank">
-                    [2] University Physics Volume 1. 2.4 Products of Vectors.
-                </a><br />
-                <br />
             </p>
+                
+            <aside>
+            <h3>References</h3><!-- references to concepts used in this problem target="_blank" will display the link in a new tab.-->
+                <ul>
+                    <li>
+                        <a href="https://openstax.org/books/university-physics-volume-1/pages/2-2-coordinate-systems-and-components-of-a-vector" 
+                            target="_blank">
+                            [1] Coordinate Systems and Components of a Vector.
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://openstax.org/books/university-physics-volume-1/pages/2-4-products-of-vectors" 
+                            target="_blank">
+                            [2] University Physics Volume 1. 2.4 Products of Vectors.
+                        </a>
+                    </li>
+                </ul>
+            </aside>    
         </section>
+
         <section>
+            <!--Problem 4-->
+            <h3>Exercise 4</h3> 
             <p>
                 An airplane is moving with a speed of 600 km / h in the NE direction. Find the projection of its velocity in the east direction.
             </p>
