--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h2 id="Vectors in Space">Vectors in Space</h2>
 
         <p>
-            In this first chapter, we examine the concept of vector, the cartesian coordinate system, which are key mathematical tools for
+            In this first chapter, we examine the concept of vector, the Cartesian coordinate system, which are key mathematical tools for
             dealing with vectors in more than one dimension, and the main vector operations. 
         </p>
 
@@ -92,7 +92,7 @@
                 A vector whose origin and end coincide is said to be a <strong>zero vector</strong>, and is usually denoted by <b><i>0</i></b>.   
                 The vector
                 <var class="vector2">BA<span>&#8594;</span></var> 
-                is said to be the vector <strong>oposite</strong> to
+                is said to be the vector <strong>opposite</strong> to
                 <var class="vector2">AB<span>&#8594;</span></var>. 
                 A vector with length equal to one is called a <strong>unit vector</strong>. Any direction may be assigned to a zero vector.
             </p>
