--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h2 id="Vectors in Space">Vectors in Space</h2>
 
         <p>
-            In this first chapter, we examine the concept of vector, the Cartesian coordinate system and the main vector
+            In this first chapter, we examine the concepts of vector, the Cartesian coordinate system and the main vector
              operations, which are key mathematical tools for dealing with vectors in more than one dimension.
         </p>
 
