--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <p>The vector origin is also named initial point or point of application. </p>
 
             <p>
-                A geometric vector as defined above is also called a <strong>fixed vector</strong> or <strong>bound
+                A geometric vector, as defined above, is also called a <strong>fixed vector</strong> or <strong>bound
                     vector</strong> because it has an unique initial point.
                 In physics is used, for example, to specify the action of the force on deformable or non rigid body. In
                 this instance, the forces and
