--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
             <p>
                 A geometric vector, as defined above, is also called a <strong>fixed vector</strong> or <strong>bound
-                    vector</strong> because it has an unique initial point.
+                    vector</strong>. Because it has a unique initial point.
                 In physics is used, for example, to specify the action of the force on deformable or non rigid body. In
                 this instance, the forces and
                 deformations within the body depend on the point of application of the force, as well as on the
