--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 A class of equal vectors lying on the same straight line is said to be a <strong>sliding
                     vector</strong>.
                 An example of sliding vector is the action of a force on a rigid body. So, in this case, the point of
-                application can be moved along the line detemined
+                application can be moved along the line determined
                 by the vector direction.
             </p>
 
