--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!-- website structure
-    - index.html: This file will contains homepage content; the text and images that people see when they first go to the site.
+    - index.html: This file will contains homepage content; the text and images that people see when they first go to 
+    the site.
     - /images folder: This folder contains all the images used on the site.
-    - /styles folder: This folder contains the CSS code used to style the site content (for example, setting text and background colors).
-    - /scripts folder: This folder contains all the JavaScript code used to add interactive functionality to the site (e.g. buttons that load data when clicked).
+    - /styles folder: This folder contains the CSS code used to style the site content (for example, setting text and 
+    background colors).
+    - /scripts folder: This folder contains all the JavaScript code used to add interactive functionality to the site 
+    (e.g. buttons that load data when clicked).
 -->
 
 <!DOCTYPE html>
@@ -10,32 +13,35 @@
 <!--<html> element wraps all the content on the entire page and is sometimes known as the root element.-->
 <!-- lang="en" declares the language of the Web page as English-->
 <html lang="en">
-<!-- <head> element acts as a container for all the stuff you want to include on the HTML page that isn't the content you are showing to your page's viewers.-->
+<!-- <head> element acts as a container for all the stuff you want to include on the HTML page that isn't the content 
+    you are showing to your page's viewers.-->
 
 <head>
-    <!-- This element sets the character set your document should use to UTF-8 which includes most characters from the vast majority of written
-    languages-->
+    <!-- This element sets the character set your document should use to UTF-8 which includes most characters from the 
+        vast majority of written languages-->
     <meta charset="utf-8">
 
     <!-- CODE TO EMBED FONTS FROM GOOGLE FONTS
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Math&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Math&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" 
+    rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" 
+    rel="stylesheet">
     -->
 
     <link rel="stylesheet" href="styles/styles.css">
 
     <title>The House of Phi</title>
-    <!--This sets the title of your page, which is the title that appears in the browser tab the page is loaded in. It is also
-        used to describe the page when you bookmark/favorite it.-->
+    <!--This sets the title of your page, which is the title that appears in the browser tab the page is loaded in. 
+        It is also used to describe the page when you bookmark/favorite it.-->
     <meta name="author" content="Miguel Angel Alvaro">
     <meta name="description"
-        content="The Pre-Universitary Physics Area aims to provide Physics students with the necessary information to start a universitary Physics
-          course. Making enphasys in example exercises where main Physics and Mathematics concepts are used. And providing references to these concepts">
+        content="The Pre-Universitary Physics Area aims to provide Physics students with the necessary information to 
+        start a universitary Physics course. Making enphasys in example exercises where main Physics and Mathematics 
+        concepts are used. And providing references to these concepts">
     <!-- LOAD THE MATHJAX LIBRARY start -->
     <!-- DOCS: https://docs.mathjax.org/en/latest/basic/mathematics.html -->
     <!-- DEMO: https://github.com/mathjax/MathJax-demos-web -->
@@ -55,7 +61,8 @@
 
 <body>
     <header>
-        <!-- id attribute define an unique identifier. Its purpose is to identify the element when linking, scripting, or styling -->
+        <!-- id attribute define an unique identifier. Its purpose is to identify the element when linking, scripting, 
+            or styling -->
         <h1 id="Home">PRE-UNIVERSITARY PHYSICS</h1>
     </header>
 
