--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
             <p>
                 When the initial point of a vector coincides with the origin of the coordinate system, we call the
-                vector a <strong>standar-position vector</strong>.
+                vector a <strong>standard-position vector</strong>.
                 Because the initial point of any vector in standard position is known to be (0,0), we can describe the
                 vector by looking at the coordinates of its terminal point.
                 Thus, if vector <b><i>v</i></b> has its initial point at the origin and its terminal point at (x,y), we
