--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <p>
                 When a vector is written in component form like this, the scalars x and y are called the
                 <strong>components</strong> of <b><i>v</i></b>.
-                When we need to perform calculations with vectors, we usually describe them as standar-position vectors
+                When we need to perform calculations with vectors, we usually describe them as standard-position vectors
                 because it is easier to perform such calculations.
             </p>
 
