--- a/index.html
+++ b/index.html
@@ -273,6 +273,8 @@
         <section>
             <h3>Vector Addition and scalar multiplication</h3>
 
+            <h4>Graphical Method</h4>
+
             <p>
                 The sum of two vectors <b><i>a</i></b> and <b><i>b</i></b>, or vector addition, produces a third vector
                 <b><i>a + b</i></b>, the resultant vector.
