--- a/index.html
+++ b/index.html
@@ -169,6 +169,34 @@
             </ul>
             </p>
         </section>
+        
+        <section>
+            <h3>Vector Addition, Graphical Method:</h3>
+
+            <p>
+                The sum of two vectors <b><i>a</i></b> and <b><i>b</i></b>, or vector addition, produces a third vector
+                <b><i>a + b</i></b>, the resultant vector.
+            </p>
+
+            <p>
+                To find <b><i>a + b</i></b>, we first draw the vector <b><i>a</i></b>, and from the terminal end of
+                <b><i>a</i></b>, we drawn the vector <b><i>b</i></b>.
+                In other words, we have the initial point of <b><i>b</i></b> meet the terminal end of <b><i>a</i></b>.
+                This position corresponds to the notion
+                that we move along the first vector and then, from its terminal point, we move along the second vector.
+            </p>
+
+            <figure class="centered">
+                <img src="images\Vector_addition.svg" width="445" height="235" />
+
+                <figcaption><b>Figure 1.5</b> Vector addition. Graphical method.</figcaption>
+            </figure>
+
+            <p>
+                A <strong>scalar</strong> is a quantity that has magnitude but no direction. Or, in other words, a
+                quantity that can be expressed by one (real) number.
+            </p>
+        </section>
 
         <section>
             <h3>Cartesian coordinate System</h3>
@@ -270,39 +298,9 @@
 
         </section>
 
-        <section>
-            <h3>Vector Addition and scalar multiplication</h3>
-
-            <h4>Graphical Method</h4>
-
-            <p>
-                The sum of two vectors <b><i>a</i></b> and <b><i>b</i></b>, or vector addition, produces a third vector
-                <b><i>a + b</i></b>, the resultant vector.
-            </p>
-
-            <p>
-                To find <b><i>a + b</i></b>, we first draw the vector <b><i>a</i></b>, and from the terminal end of
-                <b><i>a</i></b>, we drawn the vector <b><i>b</i></b>.
-                In other words, we have the initial point of <b><i>b</i></b> meet the terminal end of <b><i>a</i></b>.
-                This position corresponds to the notion
-                that we move along the first vector and then, from its terminal point, we move along the second vector.
-            </p>
-
-            <figure class="centered">
-                <img src="images\Vector_addition.svg" width="445" height="235" />
-
-                <figcaption><b>Figure 1.5</b> Vector addition. Graphical method.</figcaption>
-            </figure>
-
-            <p>
-                A <strong>scalar</strong> is a quantity that has magnitude but no direction. Or, in other words, a
-                quantity that can be expressed by one (real) number.
-            </p>
-        </section>
-
         <aside>
             <h3>References</h3>
-            <!-- references to concepts used in this section. target="_blank" will display the link in a new tab.-->
+            <!-- references to concepts used in this article. target="_blank" will display the link in a new tab.-->
             <ul>
                 <li>
                     <a href="https://openstax.org/books/precalculus/pages/8-8-vectors" target="_blank">
