--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 
 <head>
     <!-- This element sets the character set your document should use to UTF-8 which includes most characters from the 
-        vast majority of written languages-->
+        vast majority of written languages
+    -->
     <meta charset="utf-8">
+    
 
     <!-- CODE TO EMBED FONTS FROM GOOGLE FONTS
     <link rel="preconnect" href="https://fonts.googleapis.com">
