--- a/index.html
+++ b/index.html
@@ -278,7 +278,10 @@
                     <i>x</i> units along the x-axis, then <i>y</i> units in
                     the direction of the y-axis, then <i>z</i> units in the direction of the z-axis.</figcaption>
             </figure>
+        </section>
 
+        <section>
+            <h3>Components of a Vector</h3>
             <p>
                 When the initial point of a vector coincides with the origin of the coordinate system, we call the
                 vector a <strong>standard-position vector</strong>.
