--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <!-- LOAD THE MATHJAX LIBRARY end -->
-    
+
     <!-- load the default AsciiMath configuration-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=AM_CHTML"></script>
 </head>
@@ -308,7 +308,8 @@
                 we use the inverse tangent function.
             </p>
             <p>
-                Given a position vector <b><i>v</i></b> = ⟨x, y⟩, the magnitude is found by |<b><i>v</i></b>| = `sqrt(x^2+y^2)`
+                Given a position vector <b><i>v</i></b> = ⟨x, y⟩, the magnitude is found by |<b><i>v</i></b>| =
+                 `sqrt(x^2+y^2)`. And the direction is found by &theta; = tan <sup>-1</sup>`(y/x)`.
             </p>
         </section>
 
