--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 A vector is characterized:
             <ul>
                 <li>
-                    by its <strong>modulus</strong> (or length), which is equal to the length of the segment <SPAN
+                    by its <strong>magnitude</strong> (or length), which is equal to the length of the segment <SPAN
                         class="segment">AB</SPAN>
                     and is denoted by |<b><i>v</i></b>|,
                 </li>
@@ -201,7 +201,7 @@
             <h3>Cartesian coordinate System</h3>
 
             <p>
-                To specify the modulus and direction of a vector we need a coordinate system. There are three commonly
+                To specify the magnitude and direction of a vector we need a coordinate system. There are three commonly
                 used coordinate systems: Cartesian, cylindrical and spherical.
                 In this section we describe the Cartesian coordinate system.
             </p>
@@ -310,6 +310,13 @@
             <p>
                 Given a position vector <b><i>v</i></b> = ⟨x, y⟩, the magnitude is found by |<b><i>v</i></b>| =
                  `sqrt(x^2+y^2)`. And the direction is found by &theta; = tan <sup>-1</sup>`(y/x)`.
+            </p>
+            <p>
+                Given the magnitude and direction of a vector, its x component is found by x = cos&theta; and its 
+                y component is found y = sin&theta;.
+            </p>
+            <p>
+                this app finds vector magnitude and direction given its components.
             </p>
         </section>
 
