--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=AM_CHTML"></script>--
 
     <!-- loads page script file-->
-    <script src="scripts/main.js" defer></script>
+    <script src="scripts/main" defer></script>
 </head>
 <!-- some format tips:
 <b> ... </b> (bold),
