--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <!-- LOAD THE MATHJAX LIBRARY end -->
 
-    <!-- load the default AsciiMath configuration-->
+    <!-- load the default AsciiMath configuration  http://asciimath.org/ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=AM_CHTML"></script>--
 
     <!-- loads page script file-->
@@ -356,6 +356,14 @@
                 <canvas id="myCanvas" width="400" height="400" style="border:1px solid grey">
                 </canvas>
             </form>
+        </section>
+
+        <section>
+            <h3>Vector addition using vector components</h3>
+
+            <p>
+                Given two vectos in its component form, <b><i>v</i></b> = ⟨`x_1, y⟩,
+            </p>
         </section>
 
         <aside>
