--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             <h3>Vector addition using vector components</h3>
 
             <p>
-                Given two vectos in its component form, <b><i>v</i></b> = ⟨`x_1, y⟩,
+                Given two vectos in its component form, <b><i>v</i></b> = ⟨`x_1`, y⟩,
             </p>
         </section>
 
