--- a/index.html
+++ b/index.html
@@ -362,7 +362,12 @@
             <h3>Vector addition using vector components</h3>
 
             <p>
-                Given two vectors in its component form, <b><i>v</i></b> = ` << x_1, y_1 >> `,
+                The sum of two vectors given in its component form, <b><i>v</i></b> = ` << x_1, y_1 >> ` and 
+                <b><i>w</i></b> = ` << x_2, y_2 >> `, is defined as
+            </p>
+
+            <p class="centered">
+                <b><i>v</i></b> + <b><i>w</i></b> = ` << x_1 + x_2, y_1 + y_2 >> `.
             </p>
         </section>
 
