--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
         </section>
 
         <section>
-            <h3>Vector addition using vector components</h3>
+            <h3>Vector addition and scalar multiplication using vector components</h3>
 
             <p>
                 The sum of two vectors given in its component form, <b><i>v</i></b> = ` << x_1, y_1 >> ` and 
@@ -368,6 +368,15 @@
 
             <p class="centered">
                 <b><i>v</i></b> + <b><i>w</i></b> = ` << x_1 + x_2, y_1 + y_2 >> `.
+            </p>
+
+            <p>
+                The product of an scalar <i>k</i> and a vector <b><i>v</i></b>, given in its component form,
+                <b><i>v</i></b> = ` << x, y >> `, is defined as
+            </p>
+
+            <p class="centered">
+                 <i>k</i><b><i>v</i></b> = ` << kx, ky >> `
             </p>
         </section>
 
