--- a/index.html
+++ b/index.html
@@ -371,12 +371,12 @@
             </p>
 
             <p>
-                The product of an scalar <i>k</i> and a vector <b><i>v</i></b>, given in its component form,
+                The product of an scalar `lambda` and a vector <b><i>v</i></b>, given in its component form,
                 <b><i>v</i></b> = ` << x, y >> `, is defined as
             </p>
 
             <p class="centered">
-                 <i>k</i><b><i>v</i></b> = ` << kx, ky >> `
+                 'lambda`<b><i>v</i></b> = ` << 'lambda`x, 'lambda`y >> `
             </p>
         </section>
 
