--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             </p>
 
             <p class="centered">
-                 'lambda`<b><i>v</i></b> = ` << 'lambda`x, 'lambda`y >> `
+                 `lambda`<b><i>v</i></b> = ` << lambdax, lambday >> `
             </p>
         </section>
 
