--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
                 we use the inverse tangent function.
             </p>
             <p>
-                Given a position vector <b><i>v</i></b> = ⟨x, y⟩, the magnitude is found by |<b><i>v</i></b>| =
-                 `sqrt(x^2+y^2)`. And the direction is found by &theta; = tan <sup>-1</sup>`(y/x)`.
+                Given a position vector <b><i>v</i></b> = ⟨x, y⟩, the magnitude (or module) is found by 
+                `abs(|<b><i>v</i></b>|) = sqrt(x^2+y^2)`. And the direction is found by &theta; = tan <sup>-1</sup>`(y/x)`.
             </p>
             <p>
                 Given the magnitude and direction of a vector, its x component is found by x = cos&theta; and its 
@@ -377,6 +377,15 @@
 
             <p class="centered">
                  `lambda`<b><i>v</i></b> = ` << lambdax, lambday >> `
+            </p>
+        </section>
+
+        <section>
+            <h3>The unit vector</h3>
+
+            <p>
+                A vector divided by its magnitude is a unit vector. The vector magnitude is an scalar, and dividing by
+                 a scalar is the same as multiplying by the reciprocal of the scalar.
             </p>
         </section>
 
