--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             </p>
             <p>
                 Given a position vector <b><i>v</i></b> = ⟨x, y⟩, the magnitude (or module) is found by 
-                `abs(v) = sqrt(x^2+y^2)`. And the direction is found by &theta; = tan <sup>-1</sup>`(y/x)`.
+                |<b><i>v</i></b>| = `sqrt(x^2+y^2)`. And the direction is found by &theta; = tan <sup>-1</sup>`(y/x)`.
             </p>
             <p>
                 Given the magnitude and direction of a vector, its x component is found by x = cos&theta; and its 
