--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <li>
                     by its <strong>magnitude</strong> (or length), which is equal to the length of the segment <SPAN
                         class="segment">AB</SPAN>
-                    and is denoted by |<b><i>v</i></b>|,
+                    and is denoted by `abs(vectv)` |<b><i>v</i></b>|,
                 </li>
                 <li>
                     and by its <strong>direction</strong>: from A to B.
