--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <li>
                     by its <strong>magnitude</strong> (or length), which is equal to the length of the segment <SPAN
                         class="segment">AB</SPAN>
-                    and is denoted by `abs(vectv)` |<b><i>v</i></b>|,
+                    and is denoted by `abs(vecv)`,
                 </li>
                 <li>
                     and by its <strong>direction</strong>: from A to B.
@@ -176,7 +176,7 @@
             <h3>Vector Addition, Graphical Method:</h3>
 
             <p>
-                The sum of two vectors <b><i>a</i></b> and <b><i>b</i></b>, or vector addition, produces a third vector
+                The sum of two vectors `veca` and vec`b`, or vector addition, produces a third vector `vec(a+b)`
                 <b><i>a + b</i></b>, the resultant vector.
             </p>
 
