--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
             <h3>Vector Addition, Graphical Method:</h3>
 
             <p>
-                The sum of two vectors `veca` and vec`b`, or vector addition, produces a third vector `vec(a+b)`
-                <b><i>a + b</i></b>, the resultant vector.
+                The sum of two vectors  and `vecb`, or vector addition, produces a third vector `vec(a+b)`,
+                 the resultant vector.`veca`
             </p>
 
             <p>
-                To find <b><i>a + b</i></b>, we first draw the vector <b><i>a</i></b>, and from the terminal end of
-                <b><i>a</i></b>, we drawn the vector <b><i>b</i></b>.
-                In other words, we have the initial point of <b><i>b</i></b> meet the terminal end of <b><i>a</i></b>.
+                To find `vec(a+b)`, we first draw the vector `veca`, and from the terminal end of
+                `veca`, we drawn the vector `vecb`.
+                In other words, we have the initial point of `vecb` meet the terminal end of `veca`.
                 This position corresponds to the notion
                 that we move along the first vector and then, from its terminal point, we move along the second vector.
             </p>
@@ -232,7 +232,7 @@
                 A <strong>Cartesian coordinate system in three dimensions</strong> consists of three perpendicular axes:
                 the x-axis, the y-axis, and the z-axis that go
                 through a common point (the origin <b>0</b>).
-                Because each axis is a number line representing all real numbers in &#8477;,
+                Because each axis is a number line representing all real numbers in `RR` &#8477;,
                 <!--&#8477; Unicode for real numbers-->
 
                 the three-dimensional system is often denoted by &#8477;<sup>3</sup>.
