--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <h3>Vector Addition, Graphical Method:</h3>
 
             <p>
-                The sum of two vectors  and `vecb`, or vector addition, produces a third vector `vec(a+b)`,
+                The sum of two vectors `veca` and `vecb`, or vector addition, produces a third vector `vec(a+b)`,
                  the resultant vector.`veca`
             </p>
 
@@ -232,10 +232,10 @@
                 A <strong>Cartesian coordinate system in three dimensions</strong> consists of three perpendicular axes:
                 the x-axis, the y-axis, and the z-axis that go
                 through a common point (the origin <b>0</b>).
-                Because each axis is a number line representing all real numbers in `RR` &#8477;,
+                Because each axis is a number line representing all real numbers in `RR`,
                 <!--&#8477; Unicode for real numbers-->
 
-                the three-dimensional system is often denoted by &#8477;<sup>3</sup>.
+                the three-dimensional system is often denoted by `RR^3` &#8477;<sup>3</sup>.
             </p>
 
             <p>
