--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 Because each axis is a number line representing all real numbers in `RR`,
                 <!--&#8477; Unicode for real numbers-->
 
-                the three-dimensional system is often denoted by `RR^3` &#8477;<sup>3</sup>.
+                the three-dimensional system is often denoted by `RR^3`.
             </p>
 
             <p>
@@ -286,17 +286,17 @@
                 vector a <strong>standard-position vector</strong>.
                 Because the initial point of any vector in standard position is known to be (0,0), we can describe the
                 vector by looking at the coordinates of its terminal point.
-                Thus, if vector <b><i>v</i></b> has its initial point at the origin and its terminal point at (x, y), we
+                Thus, if vector `vecv` has its initial point at the origin and its terminal point at (x, y), we
                 write the vector in component form as
             </p>
 
             <p class="centered">
-                <b><i>v</i></b> = ⟨x, y⟩.
+                `vecv` = ⟨x, y⟩.
             </p>
 
             <p>
                 When a vector is written in component form like this, the scalars x and y are called the
-                <strong>components</strong> of <b><i>v</i></b>.
+                <strong>components</strong> of `vecv`.
                 When we need to perform calculations with vectors, we usually describe them as standard-position vectors
                 because it is easier to perform such calculations.
             </p>
@@ -311,8 +311,8 @@
                 we use the inverse tangent function.
             </p>
             <p>
-                Given a position vector <b><i>v</i></b> = ⟨x, y⟩, the magnitude (or module) is found by 
-                |<b><i>v</i></b>| = `sqrt(x^2+y^2)`. And the direction is found by &theta; = tan <sup>-1</sup>`(y/x)`.
+                Given a position vector `vecv` = ⟨x, y⟩, the magnitude (or module) is found by 
+                |`vecv`| = `sqrt(x^2+y^2)`. And the direction is found by &theta; = tan <sup>-1</sup>`(y/x)`.
             </p>
             <p>
                 Given the magnitude and direction of a vector, its x component is found by x = cos&theta; and its 
@@ -362,7 +362,7 @@
             <h3>Vector addition and scalar multiplication using vector components</h3>
 
             <p>
-                The sum of two vectors given in its component form, <b><i>v</i></b> = ` << x_1, y_1 >> ` and 
+                The sum of two vectors given in its component form, `vecv = << x_1, y_1 >> ` and 
                 <b><i>w</i></b> = ` << x_2, y_2 >> `, is defined as
             </p>
 
