--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             </p>
 
             <p class="centered">
-                `vecv` = ⟨x, y⟩.
+                `vecv = << x,y >>` .
             </p>
 
             <p>
