--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             </p>
 
             <p class="centered">
-                `vecv = << x,y >>` .
+                `vecv = << x,y >>`.
             </p>
 
             <p>
@@ -311,8 +311,8 @@
                 we use the inverse tangent function.
             </p>
             <p>
-                Given a position vector `vecv` = ⟨x, y⟩, the magnitude (or module) is found by 
-                |`vecv`| = `sqrt(x^2+y^2)`. And the direction is found by &theta; = tan <sup>-1</sup>`(y/x)`.
+                Given a position vector `vecv = << x,y >>`, the magnitude (or module) is found by 
+                `abs(vecv) = sqrt(x^2+y^2)`. And the direction is found by &theta; = tan <sup>-1</sup>`(y/x)`.
             </p>
             <p>
                 Given the magnitude and direction of a vector, its x component is found by x = cos&theta; and its 
